@@ -1,3 +1,12 @@
+2003-12-19  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	Port change over from GCC:
+	2003-11-20  Kelley Cook  <kcook@gcc.gnu.org>
+	* Makefile.tpl (BASE_FLAGS_TO_PASS): Pass along CONFIG_SHELL.
+	(configure-build-[+module+], configure-[+module+]): Likewise.
+	(configure-target-[+module+], configure-gcc, config.status): Likewise.
+	* Makefile.in: Regenerate.
+
 2003-12-08  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* configure.in (raw_libstdcxx_flags): Remove the leading space.
